[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EventGraph/scripts/KeySaver.gd" type="Script" id=1]

[node name="KeySetterDialogue" type="GraphNode"]
margin_right = 139.0
margin_bottom = 108.0
title = "Set Key"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="ReferenceNameEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 123.0
margin_bottom = 48.0
placeholder_text = "ReferenceName"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 123.0
margin_bottom = 52.0

[node name="KeyEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 123.0
margin_bottom = 77.0
placeholder_text = "Key"

[node name="ValueEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 78.0
margin_right = 123.0
margin_bottom = 102.0
placeholder_text = "Value"
